tests/ui/docbox/duplicate_fields.stderr
error: Duplicate field `content`
 --> $DIR/duplicate_fields.rs:3:31
  |
3 | #[docbox(content="content 1", content="content 2")]
  |                               ^^^^^^^^^^^^^^^^^^^
