tests/ui/docbox/duplicate_fields.rs
use doc_item::docbox;

#[docbox(content="content 1", content="content 2")]
fn duplicate_fields() {}

fn main() {}
